Fixed swagger description and updated documentation
